--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpg" href="/public/ricknm.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Rick & Morty Pedia</title>
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#070f1c" />
+    <link rel="icon" type="image/x-icon" href="/ricknm.ico" />
+    <link rel="shortcut icon" href="/ricknm.ico" />
   </head>
   <body>
     <div id="root"></div>
