--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <meta name="theme-color" content="#070f1c" />
     <link rel="icon" type="image/x-icon" href="/ricknm.ico" />
     <link rel="shortcut icon" href="/ricknm.ico" />
+    <meta name="description" content="Découvre tous les persos de Rick et Morty. Wubba Lubba dub-dub !" />
+    <meta property="og:title" content="Rick & Morty Pedia" />
+    <meta property="og:description" content="Découvre tous les persos de Rick et Morty. Wubba Lubba dub-dub !" />
+    <meta property="og:image" content="https://rickpedia-five.vercel.app/og-image.png" />
+    <meta property="og:url" content="https://rickpedia-five.vercel.app/" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
