updated meta with opengraph

--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpg" href="/public/ricknm.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rick & Morty Pedia</title>
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#070f1c" />
     <link rel="icon" type="image/x-icon" href="/ricknm.ico" />
     <link rel="shortcut icon" href="/ricknm.ico" />
-    <meta name="description" content="Découvre tous les persos de Rick et Morty. Wubba Lubba dub-dub !" />
-    <meta property="og:title" content="Rick & Morty Pedia" />
-    <meta property="og:description" content="Découvre tous les persos de Rick et Morty. Wubba Lubba dub-dub !" />
-    <meta property="og:image" content="https://rickpedia-five.vercel.app/og-image.png" />
-    <meta property="og:url" content="https://rickpedia-five.vercel.app/" />
-    <meta property="og:type" content="website" />
+
+    <title>Rick & Morty Pedia</title>
+    <meta name="description" content="Découvre tous les persos de Rick et Morty. Wubba Lubba dub-dub !">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://rickpedia-five.vercel.app">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Rick & Morty Pedia">
+    <meta property="og:description" content="Découvre tous les persos de Rick et Morty. Wubba Lubba dub-dub !">
+    <meta property="og:image" content="https://rickpedia-five.vercel.app/og-image.png">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="rickpedia-five.vercel.app">
+    <meta property="twitter:url" content="https://rickpedia-five.vercel.app">
+    <meta name="twitter:title" content="Rick & Morty Pedia">
+    <meta name="twitter:description" content="Découvre tous les persos de Rick et Morty. Wubba Lubba dub-dub !">
+    <meta name="twitter:image" content="https://rickpedia-five.vercel.app/og-image.png">
   </head>
   <body>
     <div id="root"></div>
